Updated link to wiki in README file

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Game Project
 
-Visit the [wiki](wiki) for more information.
+Visit the [wiki](https://github.com/robotoer/game-project/wiki) for more information.
 
