--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">gameproject</string>
+    <string name="button_submit">This is a submitter</string>
 </resources>
